# rogueloot

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LootDrop.ini  README.md  vcpkg-configuration.json  vcpkg.json
src/: Hooks.cpp  Hooks.h  LootConfig.cpp  LootConfig.h  PCH.h  main.cpp
